--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@govbr-ds/core": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
