--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ dist-ssr
 *.sw?
 
 yarn.lock
+
+.yarn/*
+.yarn/install-state.gz
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
